modified:   client/client/src/components/Navbar.jsx   modified:   client/client/src/styles/NewProducts.css

--- a/client/client/src/styles/NewProducts.css
+++ b/client/client/src/styles/NewProducts.css
@@ -1,5 +1,5 @@
 .new-product-page{
-    background-color: #30373f;
+    background-color: #438cdf;
     height: 100vh;
     width: 100%;
     padding-top: 15vh;
@@ -8,7 +8,7 @@
 
 .new-product-container{
 
-    background-color: #181818;
+    background-color: #eb7b7b;
     padding: 3vh 2vw;
     width: 54vw;
     margin-left: 25vw;
